--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,5 +1,7 @@
 body {
-  background-color: #eee;
+  background-image: url(https://media.istockphoto.com/photos/blue-sky-and-white-clouds-background-picture-id825778252?b=1&k=20&m=825778252&s=170667a&w=0&h=jdnxK2NDwfdGvzzK3PTExB49HwLtrEZu27aB5qp_uxg=);
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
 #main {
@@ -8,13 +10,13 @@ body {
   justify-content: center;
   align-items: center;
   width: 90%;
+  opacity: 0.9;
 }
 
 .card {
   display: flex;
   width: 80%;
   padding: 10px;
-  background-color: white;
 }
 
 .recent-scores-title {
@@ -65,6 +67,11 @@ body {
   justify-content: space-between;
 }
 
+.score-item:hover {
+  background-color: #87ceeb;
+  color: white;
+}
+
 .bg-light {
   background-color: #eee;
 }
@@ -76,6 +83,7 @@ body {
   border: 0.5px solid #eee;
   box-shadow: 10px 10px 10px 10px #eee;
   padding: 5px;
+  background-color: #fff;
 }
 
 .add-score-form {
@@ -115,4 +123,15 @@ body {
 
 .none {
   display: none;
+}
+
+.white {
+  color: white;
+}
+
+@media screen and (max-width: 1100px) {
+  .card {
+    width: 100%;
+    flex-direction: column;
+  }
 }
